# git-cz

./: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  index.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr.yml  release.yml
src/: cli.rs
src/cmd/: commit.rs
